objects/Goal_Type_Business_Title__c.object
<CustomObject>
    <description>Each Goal Type may be associated with many Business Titles, each of which must indicate a multiplier value. These values are used as a multiplier when applying a Goal Template to an individual.</description>
    <fields>
        <fullName>Adjustment__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Title__c</fullName>
        <label>Business Title</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Value_Type__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Value_Type__c.Category__c</field>
                <operation>equals</operation>
                <value>Business Title</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Value_Type__c</referenceTo>
        <relationshipLabel>Goal Type Business Titles</relationshipLabel>
        <relationshipName>Goal_Type_Business_Titles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>GTBT{0}</displayFormat>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Goal_Type__c</fullName>
        <label>Goal Type</label>
        <referenceTo>Goal_Type__c</referenceTo>
        <relationshipLabel>Goal Type Business Titles</relationshipLabel>
        <relationshipName>Goal_Type_Business_Titles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Goal Type Business Title</label>
    <nameField>
        <label>Goal Type Business Title Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goal Type Business Titles</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>